linked success page with css

--- a/success.html
+++ b/success.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title id="title">Login Successful></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h2>You have successfully logged in!</h2>
