change return text

--- a/password_recovery.html
+++ b/password_recovery.html
@@ -36,7 +36,7 @@ function validateForm() {
 	
    <button id="login_button" type="submit" name="submit" onclick="validateForm()"; return false>Submit</button>
 
-   <p><a href="login.html">Click here to return to login page.</a></p>
+   <p><a href="login.html">Return to login page.</a></p>
 </div>
 </form>
 </body>
