--- a/success.html
+++ b/success.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h2>You have successfully logged in!</h2>
-<p><a href="login.html">Return to login page</a></p>
+<p><a href="login.html">Return to login page.</a></p>
 </body>
 </html>
