--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title id="title">Login Successful></title>
+	<title id="title">Login Successful</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
