--- a/password_recovery.html
+++ b/password_recovery.html
@@ -31,7 +31,7 @@ function validateForm() {
 <div id="password_recovery">
 		<h2>Password Recovery</h2>
 		<p><label for="username">Username (required):</label>		
-		<input type="text" size="35" name="username" id="username" required></p>
+		<input type="text" size="35" name="username" id="username" autofocus required></p>
 
 	
    <button id="login_button" type="submit" name="submit" onclick="validateForm()"; return false>Submit</button>
