removed unnecessary opening html tag

--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
+
 <head>
 	<meta charset="UTF-8">
 	<title id="title">Login Page</title>
@@ -11,7 +11,7 @@ function setFocusToTextBox(){
     document.getElementById("username").focus();
 };
 
-//function to display error messages for missing values in fields or display success message
+//function to display alert messages for missing values in fields or display success message
  function validateForm() {
     var y = document.forms["login_form"]["password"].value;
     var x = document.forms["login_form"]["username"].value;
